--- a/mike-week8/public_html/sass/_typography.scss
+++ b/mike-week8/public_html/sass/_typography.scss
@@ -1,27 +1,28 @@
 h1{
-  font-size: em-calc(32);
-  font-family: $serif;
-  font-color: $black;
+  font-size: em-calc(40);
+  font-family: $ceviche;
+  color: $black;
+  text-align: center;
   text-transform: capitalize;
 }
 
 h2{
   font-size: em-calc(26);
-  font-family: $serif;
-  font-color: $black;
+  font-family: $ceviche;
+  color: $black;
   text-transform: capitalize;
 }
 
 h3{
   font-size: em-calc(20);
-  font-family: $serif;
-  font-color: $black;
+  font-family: $orbitron;
+  color: $black;
   text-transform: capitalize;
 }
 
 p{
   font-size: em-calc(16);
-  font-family: $sans-serif;
-  font-color: $black;
+  font-family: $hammersmith;
+  color: $black;
   line-height: 140%;
 }
