--- a/mike-week8/public_html/sass/components/_footer.scss
+++ b/mike-week8/public_html/sass/components/_footer.scss
@@ -3,7 +3,17 @@
   padding: $spacing-medium;
   img{
     display: block;
-    width: em-calc(252);
+    max-width: em-calc(252);
     margin: 0 auto;
+  }
+  ul{
+    height: em-calc(100);
+    display: block;
+    margin: 0 auto;
+    max-width: em-calc(420);
+  }
+  a{
+    display: block;
+    float: left;
   }
 }
