--- a/mike-week8/public_html/sass/components/_header.scss
+++ b/mike-week8/public_html/sass/components/_header.scss
@@ -2,42 +2,51 @@
   clear: both;
   position:relative;
   width: 100%;
+  height: em-calc(450);
+  background-color: rgba(214, 235, 243, .5);
+  background-image: url('../img/background-explode.png');
+  background-repeat: repeat;
+  background-position: 0px 0px;
+
+  animation: animatedBackground 20s linear infinite;
 }
 
-.hero-sizing {
-  padding-top: 25%;
+@keyframes animatedBackground {
+	from { background-position: 0 0; }
+	to { background-position: 100% 0; }
 }
 
-.header-logo{
-  position: absolute;
-  top: em-calc(50);
-  left: em-calc(50);
+.banner{
+  padding: em-calc(50);
 }
 
 .menu{
-  position: absolute;
-  top: 70%;
-  left: 0;
   height: em-calc(100);
-  width: em-calc(545);
-  background-image: url('../img/ribbon.png');
-  background-position: right center;
-  ul{
-    list-style: none;
-    line-height: em-calc(100);
-    padding-right: em-calc(50);
-    li{
-      display: inline-block;
-      margin: 0 em-calc(25);
-      float: right;
-      a{
-        display: block;
-        text-decoration: none;
-        font-family: sans-serif;
-        font-size: em-calc(25);
-        color: $white;
-        text-transform: uppercase;
-      }
-    }
+  a{
+    float: left;
+    display: block;
   }
+}
+
+.nav-logo{
+  max-width: em-calc(250);
+  margin-top: em-calc(-50);
+}
+
+.nav-links{
+  text-align: center;
+  text-decoration: none;
+  margin-left: em-calc(10);
+  font-family: $ceviche;
+  color: $orange;
+  text-transform: capitalize;
+  font-size: em-calc(50);
+  &:hover{
+    color: $black;
+  }
+}
+
+.banner-container{
+  float: right;
+  width: em-calc(220);
 }
